<resources>
    <!--This is the name of the app-->
    <string name="app_name">MotivationClock</string>

    <!--These are variables for the buttons -->
    <string name="home">Home</string>
    <string name="alarm">Alarm</string>
    <string name="bored">Bored</string>
    <string name="achieve">Achieve</string>

    <!--These are page names and titles-->
    <string name="welcomeHomePage">Welcome to your motivational alarm</string>
    <string name="this_is_the_home_page">This is the home page</string>
    <string name="this_is_the_choose_task_page">This is the choose task page!</string>
    <string name="this_is_the_achievements_page">This is the Achievements Page</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title_activity_alarm_one">alarmOne</string>
    <string name="title_activity_alarm_two">alarmTwo</string>
    <string name="title_activity_alarm_three">alarmThree</string>
    <string name="title_activity_alarm_four">alarmFour</string>
    <string name="title_activity_alarm_five">alarmFive</string>


</resources>
