<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blogspot.pocketma.motivationclock.home">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This is the add alarm page!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/button7"
        android:layout_centerHorizontal="true" />
    <android.widget.LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout2">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="openHome"
            android:text="@string/home" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="openAlarm"
            android:text="@string/alarm" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="openBored"
            android:text="@string/bored" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="openAchievements"
            android:text="@string/achieve" />

    </android.widget.LinearLayout>
    <!--this is the cancel button. if cancel is pressed it will go back to the Alarm page.-->
    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="openAlarm"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"/>

    <!--this is the save button. if this button is pressed. it will go back to the alarm page
    and add that alarm to the alarm list-->
    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/save"
        />
    <android.widget.LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
            <EditText
                android:id="@+id/txtAlarmName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/button8"
                android:layout_toStartOf="@+id/button8"
                android:ems="10"
                android:inputType="textPersonName"
                android::hint="Enter Alarm Name"
        <!--android:text="Label" -->
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtAlarmName"
        android:layout_alignRight="@+id/txtAlarmName"
        android:layout_below="@+id/txtAlarmName"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Repeat" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Snooze" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText3"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignEnd="@+id/toggleButton"
        android:layout_alignRight="@+id/toggleButton"
        android:text="ToggleButton"
        android:textOff="Snooze Off"
        android:textOn="Snooze On" />

<!--this is the xml code for the alarm wheel
draw and canvas for wheel drawables
https://www.youtube.com/watch?v=R3AzhgzbpTc-->


    </android.widget.LinearLayout>

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />
</android.widget.RelativeLayout>