<?xml version="1.0" encoding="utf-8"?>

<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context="com.blogspot.pocketma.motivationclock.choose_task">
    <android.widget.LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayoutTasks">

        <android.widget.LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/horizontalTasks1">
        </android.widget.LinearLayout>

        <android.widget.LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/horizontalTasks2">
        </android.widget.LinearLayout>
        <android.widget.LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/horizontalTasks3">
        </android.widget.LinearLayout>
        <android.widget.LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/horizontalTasks4">
        </android.widget.LinearLayout>
        <android.widget.LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/horizontalTasks5">
        </android.widget.LinearLayout>



    </android.widget.LinearLayout>


    <android.widget.LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout3">



        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="openHome"
            android:text="@string/home"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="openAlarm"
            android:text="@string/alarm"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/bored"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="openAchievements"
            android:text="@string/achieve"
            android:textColor="@android:color/black" />

    </android.widget.LinearLayout>


</android.widget.RelativeLayout>

